--- a/.github/workflows/verible-ci.yml
+++ b/.github/workflows/verible-ci.yml
@@ -145,7 +145,9 @@ jobs:
       fail-fast: false
       matrix:
         include: ${{ fromJson(needs.Matrix.outputs.matrix) }}
-    name: Build · ${{ matrix.os }} ${{ matrix.version }}
+    env:
+      MATRIX_OS: '${{ matrix.os }}:${{ matrix.ver }}'
+    name: 'Build · ${{ matrix.os }}:${{ matrix.ver }}'
     steps:
 
     - uses: actions/checkout@v2
@@ -153,14 +155,14 @@ jobs:
        # Download complete repository + tags
        fetch-depth: 0
 
-    - run: docker pull ${{ matrix.os }}:${{ matrix.version }}
+    - run: docker pull $MATRIX_OS
 
     - name: Main script
       run: |
         set -x
         source ./.github/settings.sh
         cd releasing
-        ./docker-run.sh ${{ matrix.os }}-${{ matrix.version }}
+        ./docker-run.sh $MATRIX_OS
 
     - name: 📤 Upload artifact
       uses: actions/upload-artifact@v2
