--- a/verilog/analysis/checkers/BUILD
+++ b/verilog/analysis/checkers/BUILD
@@ -37,6 +37,8 @@ cc_library(
         ":generate_label_prefix_rule",
         ":generate_label_rule",
         ":interface_name_style_rule",
+        ":instance_shadow_rule",
+        ":legacy_genvar_declaration_rule",
         ":legacy_generate_region_rule",
         ":legacy_genvar_declaration_rule",
         ":line_length_rule",
@@ -1977,6 +1979,45 @@ cc_test(
         "//common/analysis:syntax_tree_linter_test_utils",
         "//common/text:symbol",
         "//verilog/CST:verilog_nonterminals",
+        "//verilog/analysis:verilog_analyzer",
+        "//verilog/parser:verilog_token_enum",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_library(
+    name = "instance_shadow_rule",
+    srcs = ["instance_shadow_rule.cc"],
+    hdrs = ["instance_shadow_rule.h"],
+    deps = [
+        "//common/analysis:citation",
+        "//common/analysis:lint_rule_status",
+        "//common/analysis:syntax_tree_lint_rule",
+        "//common/analysis/matcher",
+        "//common/analysis/matcher:bound_symbol_manager",
+        "//common/analysis/matcher:core_matchers",
+        "//common/text:symbol",
+        "//common/text:syntax_tree_context",
+        "//verilog/CST:verilog_matchers",
+        "//verilog/CST:verilog_nonterminals",
+        "//verilog/CST:identifier",
+        "//verilog/analysis:descriptions",
+        "//verilog/analysis:lint_rule_registry",
+        "@com_google_absl//absl/strings",
+    ],
+    alwayslink = 1,
+)
+
+cc_test(
+    name = "instance_shadow_rule_test",
+    srcs = ["instance_shadow_rule_test.cc"],
+    deps = [
+        ":instance_shadow_rule",
+        "//common/analysis:linter_test_utils",
+        "//common/analysis:syntax_tree_linter_test_utils",
+        "//common/text:symbol",
+        "//verilog/CST:verilog_nonterminals",
+        "//verilog/CST:verilog_treebuilder_utils",
         "//verilog/analysis:verilog_analyzer",
         "//verilog/parser:verilog_token_enum",
         "@com_google_googletest//:gtest_main",
