Add support for subcolumns in tabular alignment mode

--- a/common/formatting/BUILD
+++ b/common/formatting/BUILD
@@ -29,6 +29,8 @@ cc_library(
         "//common/util:container_iterator_range",
         "//common/util:enum_flags",
         "//common/util:logging",
+        "//common/util:vector_tree",
+        "//common/util:vector_tree_iterators",
         "@com_google_absl//absl/strings",
     ],
 )
