Add VectorTree iterators
Adds code that allows to traverse VectorTree in specific order using
range for loop. Supported traversals:

* Leaves
* Pre order
* Post order

--- a/common/util/BUILD
+++ b/common/util/BUILD
@@ -260,6 +260,16 @@ cc_library(
 )
 
 cc_library(
+    name = "vector_tree_iterators",
+    hdrs = ["vector_tree_iterators.h"],
+    deps = [
+        ":iterator_range",
+        ":logging",
+        ":vector_tree",
+    ],
+)
+
+cc_library(
     name = "map_tree",
     hdrs = ["map_tree.h"],
     deps = [
