Iterators: add tests (WIP)

--- a/common/util/BUILD
+++ b/common/util/BUILD
@@ -502,6 +502,18 @@ cc_test(
 )
 
 cc_test(
+    name = "vector_tree_iterators_test",
+    srcs = ["vector_tree_iterators_test.cc"],
+    deps = [
+        ":vector_tree_iterators",
+        ":vector_tree",
+        ":vector_tree_test_util",
+        "@com_google_absl//absl/strings",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
     name = "map_tree_test",
     srcs = ["map_tree_test.cc"],
     copts = select({
